updated figures; captions in main body and supplemental figs; references to supplemental figures from body

--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,18 +3,14 @@
 
 ## About the datasets
 
-The IUCN has published species range maps developed by species experts for `r format(n_spp_iucn, big.mark = ',')` unique marine species.  Experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences ___(Fig S1A FIX THIS REF OR THE FIGURE)___. IUCN guidelines recommend that boundaries be drawn as a "minimum convex polygon", i.e. "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  
+The IUCN has published species range maps developed by species experts for `r format(n_spp_iucn, big.mark = ',')` unique marine species.  Experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A). IUCN guidelines recommend that boundaries be drawn as a "minimum convex polygon", i.e. "the smallest polygon in which no internal angle exceeds 180 degrees and which contains all the sites of occurrence" [@iucn_iucn_2015].  
 
-In contrast, AquaMaps has modeled species distribution for `r format(n_spp_am, big.mark = ',')` species based on envelopes of environmental preference, such as temperature, depth, and salinity.  These preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species ___(Fig S1B FIX THIS REF OR THE FIGURE)___.  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1,296 (5.7% of the full dataset) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
+In contrast, AquaMaps has modeled species distribution for `r format(n_spp_am, big.mark = ',')` species based on envelopes of environmental preference, such as temperature, depth, and salinity.  These preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1,296 (5.7% of the full dataset) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
 
 In total, the two datasets provide range maps for `r format(n_spp_all, big.mark = ',')` species, with a small subset of species mapped in both datasets.  For the purposes of this analysis, we elected not to use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
 
-<!--
-OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together
--->
-
 __Comparison of taxonomic and regional distribution__:
-To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps.  We determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell (Fig S2).  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence to best approximate the "extent of occurrence" generally indicated by IUCN maps.
+To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps (Fig S2).  We determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell (Fig S1C).  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence to best approximate the "extent of occurrence" generally indicated by IUCN maps (Fig S1D).
 
 __Comparison of paired maps__:
 Although relatively small in number, overlap species present a unique opportunity to evaluate the two datasets overall.  For the species included in both datasets, we examine how well the maps align in both spatial distribution and overall area.  Based upon the definitions of extent of occurrence and area of occupancy, we expect that for a given species, the AquaMaps predicted distribution will fall within, and describe a smaller range than, the IUCN predicted distribution.  Where these expectations seem to fail, we explore methodological issues that can introduce errors.
