--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -87,10 +87,9 @@ FAO Major Fishing Area boundaries provide a readily available method to roughly 
 
 The ratio of the total predicted range for a species to the number of "occurcells" used to generate the map provides a measure of the degree to which AquaMaps extrapolates range area from limited data.  For example, AquaMaps predicts a total range of 5.4 million km^2^ for both the round ray _Rajella fyllae_ and the brittle star _Ophiothrix plana_; but the map for _R. fyllae_ is generated using 116 "occurcells" (for a data extrapolation rate of 46,800 km^2^ per cell) while the map for _O. plana_ is generated using only four (for an extrapolation rate of 1,360,000 km^2^ per cell).
 
-By this measure, the 3,208 species range maps included in Fig 4 tend to extrapolate farther based on limited data: a median predicted range of 452,000 km^2^ per "occurcell" compared to a median predicted range of 158,000 km^2^ per "occurcell" for the overall AquaMaps dataset.  This suggests that the FAO boundaries may not be sufficient to adequately constrain computer-generated ranges.  To reduce the incidence of commission errors due to aggressive extrapolation, it may be desirable to fine-tune the computer model output with additional filters, including ecosystem-based constraints such as Marine Ecoregions of the World [@spalding_marine_2007] or methods such as inverse distance weighting to enforce proximity to known observations.  Expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
+By this measure, the 3,208 species range maps included in Fig 4 tend to extrapolate farther based on limited data: a mean predicted range of 827,200 km^2^ per "occurcell" compared to a mean predicted range of 485,300 km^2^ per "occurcell" for the overall AquaMaps dataset.  This suggests that the FAO boundaries may not be sufficient to adequately constrain computer-generated ranges.  To reduce the incidence of commission errors due to aggressive extrapolation, it may be desirable to fine-tune the computer model output with additional filters, such as ecoregional constraints, e.g. Marine Ecoregions of the World [@spalding_marine_2007], or distance-based methods, e.g. inverse distance weighting to enforce proximity to known observations.  Expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
 
 ## Case Study: MPA Gap Analysis
-
 
 Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the 2014 version of the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
