--- a/data_explore/data_prep.Rmd
+++ b/data_explore/data_prep.Rmd
@@ -14,16 +14,16 @@ library(tidyr)
 library(dplyr)
 library(stringr)
 
-dir_N <- c('Windows' = '//neptune.nceas.ucsb.edu/data_edit',
-           'Darwin'  = '/Volumes/data_edit',
+dir_M <- c('Windows' = '//mazu.nceas.ucsb.edu/data_edit',
+           'Darwin'  = '/Volumes/ohi',
            'Linux'   = '/var/data/ohi')[[ Sys.info()[['sysname']] ]]
 
 dir_git <- '~/github/IUCN-AquaMaps'
   
-dir_anx <- file.path(dir_N, 'git-annex/globalprep/SPP_ICO')
+dir_anx <- file.path(dir_M, 'git-annex/globalprep/spp_ico')
 dir_fig <- file.path(dir_git, 'figures')
 dir_data <- file.path(dir_git, 'data')
-dir_data_remote <- file.path(dir_N, 'git-annex/globalprep/_raw_data')
+dir_data_remote <- file.path(dir_M, 'git-annex/globalprep/_raw_data')
 scenario <- 'v2016'
 
 if(basename(getwd()) != 'data_explore') setwd('~/github/IUCN-AquaMaps/data_explore')
@@ -32,131 +32,32 @@ source('data_explore_fxns.R')
 ### the 'setwd()' is there for running by chunk
 ```
 
-Need to:
-
-gather spp_all, spp_am, spp_iucn, spp_iucn_maps, and spp_am_raw into local data folder.
-
-``` {r pull_files_to_local, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
-### pull spp_iucn_marine.csv from git-annex and bring to local repo
-spp_iucn <- read_csv(file.path(dir_anx, scenario, 'int/spp_iucn_cleaned.csv'))
-spp_iucn <- spp_iucn %>%
-  dplyr::select(sciname, iucn_sid, iucn_category, 
-                popn_trend, parent_sid, subpop_sid) %>%
-  unique()
-write_csv(spp_iucn, file.path(dir_data, 'spp_iucn.csv'))
-          
-### pull spp_iucn_maps_all.csv from git-annex and bring to local repo
-spp_iucn_maps <- read_csv(file.path(dir_anx, scenario, 'int/spp_iucn_maps_all.csv')) %>%
-  rename(iucn_sid = id_no)
-
-spp_iucn_maps <- spp_iucn_maps %>%
-  filter(!str_detect(spp_group, 'MARINEFISH')) %>%
-  unique() %>%
-  arrange(iucn_sid)
-
-### At this point, still some duplicated iucn_sids, due to several
-### names matching a single ID.  Not sure which names might be in
-### AquaMaps though, so leave 'em in.
-
-write_csv(spp_iucn_maps, file.path(dir_data, 'spp_iucn_maps.csv'))
-
-### pull cleaned spp_am data from git-annex and bring to local repo
-spp_am <- read_csv(file.path(dir_anx, scenario, 'int/spp_am_cleaned.csv'))
-write_csv(spp_am, file.path(dir_data, 'spp_am.csv'))
-
-### pull raw aquamaps species list from git-annex and bring to local repo
-spp_am_raw <- read_csv(file.path(dir_data_remote, 'aquamaps/v2015/csv/speciesoccursum.csv'))
-write_csv(spp_am_raw, file.path(dir_data, 'speciesoccursum.csv'))
-
-```
-
 ```{r get_spp_all, echo = FALSE, warning = FALSE, message = FALSE, eval = FALSE}
-### get spp_all_complete from git-annex, bring to local repo.  The spp_all_complete
-### file was created in ohiprep/globalprep/SPP_ICO/data_prep_SPP.R, running the
-### function create_spp_master_lookup(source_pref = 'iucn', fn_tag = '_complete', reload = TRUE)
-spp_all_remote <- read_csv(file.path(dir_anx, scenario, 'int/spp_all.csv'))
-spp_all_remote_clean <- spp_all_remote %>%
-  filter(!str_detect(spatial_source, 'subpop')) %>%
-  filter(!str_detect(spatial_source,  'alias'))
-### At this point, plenty of duplicates:
-### * This code returns 984 duplicated names:
-###     length(spp_all_remote_clean$sciname) - length(unique(spp_all_remote_clean$sciname))
-### * some are AM subpops which were ignored in processing the remote spp_all file.
-###   Note: All subpops have an identified parent, so can filter them out without
-###   losing any species.
-###   code to verify this:
-###     z_parent <- spp_all_remote_clean %>% 
-###       filter(!is.na(subpop_sid) & spatial_source == 'am')
-###     z_subpop <- spp_all_remote_clean %>% 
-###       filter(!is.na(parent_sid) & spatial_source == 'am')
-###     nrow(z_subpop %>% filter(!sciname %in% z_parent$sciname))
-### * some are duplicated IUCN parents (e.g. Dermochelys coriacea) that will be 
-###   eliminated when select(-iucn_subpop) column and then unique()
 
-### filter out spatial_source == 'am' that also have parent_sid (i.e.
-### these are AM-mapped subpopulations); then: 
-### select away the iucn_subpop, parent_sid, and subpop_sid (among others),
-### these are creating false unique rows.
-spp_all <- spp_all_remote_clean %>%
-  filter(!(spatial_source == 'am' & !is.na(parent_sid))) %>%
-  dplyr::select(am_sid, sciname, reviewed, iucn_sid, popn_trend,
-                popn_category, category_score, spp_group, 
-                id_no, spatial_source, name_verified) %>%
-  unique()
-### At this point, still some duped scinames - these are ones with multiple IUCN
-### SIDs that are not designated as parents or subpops.  We will brute-force
-### this by just eliminating the duplicated rows, keeping only the first instance.
-### By arranging by iucn_sid, we will keep the lowest value, which seems to
-### generally correspond to the parent...
-spp_all <- spp_all %>%
-  arrange(iucn_sid)
-spp_all <- spp_all[!duplicated(spp_all$sciname), ]
+spp_iucn_maps <- read_csv(file.path(dir_data, 'spp_iucn_maps.csv'))
 
-length(spp_all$sciname) - length(unique(spp_all_remote_clean$sciname))
-### no duped scinames - same length as original (cleaned) list
-
-### But, some of the extracted IUCN maps don't appear on this list! add 'em in.
-spp_iucn_maps_new <- read_csv(file.path(dir_data, 'spp_iucn_maps.csv')) %>%
-  filter(!sciname %in% spp_all$sciname) %>%
-  filter(!str_detect(sciname, 'subpop')) %>% ### a Hawaiian subpop... ditch it!
-  select(-iucn_subpop)
-
-spp_all1 <- spp_all %>%
-  full_join(spp_iucn_maps_new)
-
-### Also, some of the AM listings have disappeared due to name conflicts
-### - aliases, etc.
-spp_am_new <- read_csv(file.path(dir_data, 'speciesoccursum.csv')) %>%
+spp_am_maps <- read_csv(file.path(dir_data, 'speciesoccursum.csv')) %>%
   mutate(sciname = paste(str_trim(genus), str_trim(species)),
-         iucn_sid = as.integer(iucn_id)) %>%
-  dplyr::select(am_sid = speciesid, sciname, reviewed, iucn_sid,
-                popn_category = iucn_code) %>%
-  filter(!am_sid %in% spp_all$am_sid) %>%
-  mutate(spatial_source = 'am',
-         popn_category = ifelse(popn_category == 'LR/lc', 'LC', popn_category),
-         popn_category = ifelse(popn_category == 'LR/nt', 'NT', popn_category),
-         popn_category = ifelse(popn_category == 'N.E.',  'NE', popn_category))
+         iucn_id = as.integer(iucn_id)) %>%
+  dplyr::select(am_sid = speciesid, sciname, reviewed, iucn_id)
 
-### 545 new spp_am not in spp_all from remote source, by am_sid.
-### 24 of these, however, list iucn_sids that match existing iucn_sid.
-### * for species with iucn_sid that match, and no am_sid, add am_sid to 
-###   existing record (use existing values for other fields; drop new values).
-### * for species with iucn_sid that match, and with a different am_sid, no action.
-### * for species with non-matching or NA iucn_sid, just add to list.
-spp_am_new_iucnmatch <- spp_am_new %>% 
-  filter(!is.na(iucn_sid) & iucn_sid %in% spp_all$iucn_sid) %>%
-  dplyr::select(iucn_sid, am_sid_new = am_sid, reviewed_new = reviewed)
-spp_all2 <- spp_all1 %>%
-  left_join(spp_am_new_iucnmatch, by = 'iucn_sid') %>%
-  mutate(am_sid   = ifelse(is.na(am_sid) & !is.na(am_sid_new), am_sid_new, am_sid),
-         reviewed = ifelse(is.na(am_sid) & !is.na(am_sid_new), reviewed_new, reviewed)) %>%
-  select(-am_sid_new, -reviewed_new)
-spp_all3 <- spp_all2 %>%
-  full_join(spp_am_new %>%
-              filter(!iucn_sid %in% spp_am_new_iucnmatch$iucn_sid),
-            by = c("am_sid", "sciname", "reviewed", "iucn_sid", "popn_category", "spatial_source"))
+spp_all <- spp_iucn_maps %>%
+  full_join(spp_am_maps, by = 'sciname') %>%
+  distinct()
 
-write_csv(spp_all3, file.path(dir_data, 'spp_all.csv'))
+### some confusion due to non-matching scinames and IDs...
+spp_all <- spp_all %>%
+  mutate(iucn_match = iucn_sid == iucn_id,
+         iucn_wrong_map = ifelse(!iucn_match & iucn_id %in% spp_all$iucn_sid, TRUE, FALSE)) %>%
+  mutate(iucn_sid = ifelse(iucn_wrong_map & !is.na(iucn_wrong_map), iucn_id, iucn_sid)) %>%
+  select(-iucn_match, -iucn_wrong_map, -iucn_id, -sciname_count) %>%
+  distinct()
+
+
+length(unique(x$iucn_sid)) ###  4013, incl NA
+length(unique(x$am_sid))   ### 22890, incl NA
+
+write_csv(spp_all, file.path(dir_data, 'spp_all_maps.csv'))
 
 ```
 
@@ -164,41 +65,33 @@ write_csv(spp_all3, file.path(dir_data, 'spp_all.csv'))
 ### create spp_am_v_iucn: the whole maplist narrowed down to just the overlapping species.
 ### Overlaps detected from spatial_source containing 'iucn' (b/c source_pref = 'iucn' above),
 ### that also have a non-NA AquaMaps ID code.
-spp_all <- read_csv(file.path(dir_data, 'spp_all.csv'))
+spp_all <- read_csv(file.path(dir_data, 'spp_all_maps.csv'))
 
 spp_am_v_iucn <- spp_all %>%
-  filter(str_detect(spatial_source, 'iucn') & !is.na(am_sid)) %>%
-  filter(!is.na(id_no)) %>%
-  filter(!str_detect(spp_group, 'MARINEFISH')) %>%
+  select(-iucn_subpop) %>%
+  filter(!is.na(iucn_sid) & !is.na(am_sid)) %>%
   unique()
-# length(unique(spp_am_v_iucn$am_sid)); length(unique(spp_am_v_iucn$iucn_sid))
-### NOTE: 2345 unique scientific names; but 2283 unique am_sid and 2249 unique iucn_sid.
-### Some unique species (as identified by am_sid and iucn_sid) have multiple
-### scinames.  At this point, not really important what the sciname is?
-spp_am_v_iucn1 <- spp_am_v_iucn %>%
+
+# length(unique(spp_am_v_iucn$sciname)); length(unique(spp_am_v_iucn$am_sid)); length(unique(spp_am_v_iucn$iucn_sid))
+### NOTE: 2314 unique scientific names; but 2314 unique am_sid and 2320 unique iucn_sid.
+### Seasnakes are included in Reptiles (IUCN).  Two "mangroves" that are actually seagrasses.
+spp_am_v_iucn <- spp_am_v_iucn %>%
   group_by(am_sid, iucn_sid) %>%
-  mutate(dupes = n() - 1,
-         first_instance = sciname == first(sciname)) %>%
-  filter(!(dupes > 0 & !first_instance)) %>%
-  select(-dupes, -first_instance) %>%
-  ungroup()
-# length(unique(spp_am_v_iucn1$am_sid)); length(unique(spp_am_v_iucn1$iucn_sid))
+  mutate(dupes = n() - 1) %>%
+  ungroup() %>%
+  filter(!(dupes == 1 & spp_group == 'MANGROVES')) %>%
+  filter(spp_group != 'SEASNAKES') %>%
+  select(-dupes)
+# length(unique(spp_am_v_iucn$sciname)); length(unique(spp_am_v_iucn$am_sid)); length(unique(spp_am_v_iucn$iucn_sid))
 
-### What species are represented by the duplicated IUCN ID numbers?  These
-### are species that IUCN experts lumped together (via synonyms etc) 
-### but are treated as separate by AquaMaps (the reverse does not seem
-### to happen)...  There are 64 AM species IDs and only 30 IUCN species IDs.  
-### How to treat in the mapping?
-### * lump AM species together and plot against a single IUCN species map?
-###   That would occur in the area determining function - group by iucn_sid
-###   and map all am_sids against that iucn_sid
-x <- spp_am_v_iucn1 %>%
-  group_by(iucn_sid) %>%
+sciname_dupes <- spp_am_v_iucn %>%
+  group_by(sciname) %>%
   filter(n() > 1)
-# length(unique(x$am_sid)); length(unique(x$iucn_sid))
-  
+### these seem to be spp with IUCN maps for synonyms.  Keep 'em in.
 
-write_csv(spp_am_v_iucn1, file.path(dir_data, 'spp_am_v_iucn.csv'))
+
+write_csv(spp_am_v_iucn, file.path(dir_data, 'spp_am_v_iucn.csv'))
+
 ```
 
 ```{r read_am_and_iucn_data, echo = FALSE, warning = FALSE, message = FALSE}
@@ -207,25 +100,31 @@ spp_am_v_iucn <- read_csv(file.path(dir_data, 'spp_am_v_iucn.csv'))
 
 # Data files
 
-### This file is generated in globalprep/SPP_ICO:
-iucn_spp_cells_all <- read_csv(file.path(dir_data_remote, 'iucn_spp/iucn_cells_v2016.csv'),
-                            col_types = 'cddddc')
+# iucn_spp_cells_files <- list.files(file.path(dir_anx, 'v2016/iucn_intersections'), full.names = TRUE)
+# iucn_spp_cells_all <- lapply(iucn_spp_cells_files, FUN = function(x) {
+#   read_csv(x) %>% 
+#     mutate(id_no = as.integer(id_no)) %>%
+#     rename(iucn_sid = id_no)
+#   }) %>%
+#   bind_rows()
+# 
+# iucn_spp_cells <- iucn_spp_cells_all %>%
+#   filter(iucn_sid %in% spp_am_v_iucn$iucn_sid) %>%
+#   filter(presence != 5)
 
-iucn_spp_cells <- iucn_spp_cells_all %>%
-  rename(iucn_sid = id_no) %>%
-  filter(iucn_sid %in% spp_am_v_iucn$iucn_sid) %>%
-  filter(presence != 5)
-### length(unique(iucn_spp_cells$iucn_sid)) results in 2279 species found...
-### some species with no cells reported.  2279 listed in the am v iucn file.
-write_csv(iucn_spp_cells, file.path(dir_anx, 'vAM_IUCN/iucn_spp_cells_2015.csv'))
+### length(unique(iucn_spp_cells$iucn_sid)) results in 2271 species found...
+###   some species with no cells reported.  
+### spp_missing <- spp_am_v_iucn %>% filter(!iucn_sid %in% iucn_spp_cells$iucn_sid)
+###   49 spp with no cells reported.  Shapefile errors?
+# write_csv(iucn_spp_cells, file.path(dir_anx, 'vAM_IUCN/iucn_spp_cells_2015.csv'))
 
 message('Loading AquaMaps species to cell table.  This might take a few minutes.')
-am_spp_cells_all <- fread(file.path(dir_data_remote, 'aquamaps/v2015/csv/hcaf_sp_native_trunc.csv'), 
+am_spp_cells_all <- fread(file.path(dir_data_remote, 'aquamaps/d2015/csv/hcaf_sp_native_trunc.csv'), 
                          showProgress = TRUE)
 am_spp_cells <- am_spp_cells_all %>%
   rename(am_sid = speciesid, prob = probability) %>%
   filter(am_sid %in% spp_am_v_iucn$am_sid)
-### length(unique(am_spp_cells$am_sid)) results in 2314 species found - great!
+### length(unique(am_spp_cells$am_sid)) results in 2314 species found
 write_csv(am_spp_cells, file.path(dir_anx, 'vAM_IUCN/am_spp_cells_2015.csv'))
 
 ```
@@ -244,8 +143,8 @@ if (!file.exists(data_file) | reload) {
   if(!exists('am_spp_cells'))
     am_spp_cells <- read_csv(file.path(dir_anx, 'vAM_IUCN/am_spp_cells_2015.csv'))
   if(!exists('iucn_spp_cells'))
-    iucn_spp_cells <- read_csv(file.path(dir_anx, 'vAM_IUCN/iucn_spp_cells_2015.csv'),
-                               col_types = 'cddddc')
+    iucn_spp_cells <- read_csv(file.path(dir_anx, 'vAM_IUCN/iucn_spp_cells_2015.csv'))
+  
   ### species info list - scinames, IUCN species ID, AM species ID, category etc
   spp_list_base <- read_csv(file.path(dir_data, 'spp_am_v_iucn.csv'))
   
